--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -1,16 +1,31 @@
 
 server.port=8093
-#MongoDB Start
-#spring.data.mongodb.uri=mongodb://localhost:27017/mydatabase
-##spring.data.mongodb.uri=mongodb+srv://myproject:1234@atlascluster.fu8tkbx.mongodb.net/
-#spring.data.mongodb.uri=mongodb+srv://myproject:1234@cluster0.8zcjtnj.mongodb.net/
+spring.application.name=core
 
-#MongoDB End
-
-# PostgreSQL connection properties
-spring.datasource.url=jdbc:postgresql://localhost:9555/postgres
-spring.datasource.username=postgres
-spring.datasource.password=mysecretpassword
-
-# Hibernate ddl auto (create, create-drop, update, validate)
+## PostgreSQL connection properties
+#spring.datasource.url=jdbc:postgresql://localhost:9555/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=mysecretpassword
+#
+## Hibernate ddl auto (create, create-drop, update, validate)
 spring.jpa.hibernate.ddl-auto=create
+
+
+
+# H2 Veritabanı
+spring.datasource.url=jdbc:h2:mem:myDatabase;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Veritabanının otomatik olarak oluşturulmasını sağlar
+spring.jpa.defer-datasource-initialization=false
+#data.sql dosyasındaki SQL sorgularını yürütğlmesini sağlar.
+spring.datasource.initialization-mode=always
+
+# H2 Console'u etkinleştirir
+spring.h2.console.enabled=true
+
+# Diğer konfigürasyon ayarları
+spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
