--- a/frontend/src/main/resources/application.properties
+++ b/frontend/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 
 server.port=8091
-spring.mvc.view.prefix: /WEB-INF/jsp/
-spring.mvc.view.suffix: .jsp
+spring.mvc.view.prefix= /WEB-INF/jsp/
+spring.mvc.view.suffix= .jsp
+#
+#spring.datasource.url=jdbc:postgresql://localhost:9555/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=mysecretpassword
+#
+#
+#
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
 
-spring.datasource.url=jdbc:postgresql://localhost:9555/postgres
-spring.datasource.username=postgres
-spring.datasource.password=mysecretpassword
+
+
