--- a/frontend/src/main/resources/application.properties
+++ b/frontend/src/main/resources/application.properties
@@ -1,14 +1,11 @@
 
 server.port=8091
-spring.mvc.view.prefix= /WEB-INF/jsp/
-spring.mvc.view.suffix= .jsp
-#
-#spring.datasource.url=jdbc:postgresql://localhost:9555/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=mysecretpassword
-#
-#
-#
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+# Statik dosyaların yerini belirtin
+spring.web.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:/resources/static/
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 
