--- a/facade/pom.xml
+++ b/facade/pom.xml
@@ -5,65 +5,51 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.5</version>
+        <version>2.7.11</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.core</groupId>
-    <artifactId>core</artifactId>
+    <groupId>com.facade</groupId>
+    <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>demo</name>
+    <name>facade</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>11</java.version>
     </properties>
     <dependencies>
-
-        <!-- Spring Boot ile web uygulamaları geliştirmek için gerekli bağımlılıkları sağlar. -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
-        <!-- Geliştirme ortamı için Spring Boot DevTools daha hızlı geliştirme döngüsü için ek geliştirme araçları sağlar.-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
-
-
-
-        <!-- Spring Data JPA, Java Persistence API (JPA) ile çalışmayı kolaylaştıran bir Spring Framework modülüdür.  -->
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-jpa</artifactId>
-            <version>2.5.1</version>
-        </dependency>
-
-
-
-        <!-- Spring Boot ile birlikte Spring Data JPA kullanımını kolaylaştıran bir başlangıç bağımlılığıdır. -->
-        <!-- JPA entegrasyonu için gerekli yapılandırmaları yapmanıza ve bağımlılıkları el ile belirtmenize gerek kalmaz.-->
+        <!-- Spring Boot ile web uygulamaları geliştirmek için gerekli bağımlılıkları sağlar. -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-        </dependency>
-
-
-        <!-- Testler için Spring Boot Starter Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.core</groupId>
+            <artifactId>core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
-
-
 
     <build>
         <plugins>
